--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,25 +1,43 @@
 name: Release
-on:
-  push:
-    tags:
-      - 'v*'
+on: [push, pull_request]
 
 jobs:
-    release:
-      runs-on: ${{ matrix.os }}
-  
-      strategy:
-        matrix:
-          os: [macos-latest, ubuntu-latest, windows-latest]
-  
-      steps:
-      - uses: actions/checkout@v2       
-      - uses: actions/setup-node@master
+  release:
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest, windows-latest]
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@master
         with:
           node-version: 20
-      - name: install dependencies
+      
+      - name: Lint
+        run: yarn lint
+
+      - name: Install dependencies
         run: yarn install --frozen-lockfile
-      - name: publish
+
+      - name: Conditional Make
+        run: |
+          if [ "${{ startsWith(github.ref, 'refs/tags/') }}" != "true" ]; then
+            npm run make
+          else
+            echo "Tag push detected. Skipping make."
+          fi
+
+      - name: Conditional Publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npm run publish
+        run: |
+          if [ "${{ startsWith(github.ref, 'refs/tags/') }}" == "true" ]; then
+            npm run publish
+          else
+            echo "Not a tag push. Skipping publish."
+          fi
