--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
           yarn global add eslint
           yarn lint
 
-      - name: Conditional Make
+      - name: Make
         run: |
           if [ "${{ startsWith(github.ref, 'refs/tags/') }}" != "true" ]; then
             npm run make
@@ -34,7 +34,7 @@ jobs:
             echo "Tag push detected. Skipping make."
           fi
 
-      - name: Conditional Publish
+      - name: Publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
