--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Build/release
 on: [push, pull_request]
 
 jobs:
@@ -10,36 +10,21 @@ jobs:
         os: [macos-latest, ubuntu-latest, windows-latest]
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Check out Git repository
+        uses: actions/checkout@v1
 
-      - name: Setup Node.js
-        uses: actions/setup-node@master
+      - name: Install Node.js, NPM and Yarn
+        uses: actions/setup-node@v1
         with:
           node-version: 20
-
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
-
+      
       - name: Lint
         run: |
           yarn global add eslint
           yarn lint
 
-      - name: Make
-        run: |
-          if: ${{ ! startsWith(github.ref, 'refs/tags/') }}
-            npm run make
-          else
-            echo "Tag push detected. Skipping make."
-          fi
-
-      - name: Publish
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          if: startsWith(github.ref, 'refs/tags/')
-            npm run publish
-          else
-            echo "Not a tag push. Skipping publish."
-          fi
+      - name: Build/release Electron app
+        uses: samuelmeuli/action-electron-builder@v1
+        with:
+          github_token: ${{ secrets.github_token }}
+          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
