--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,20 +28,20 @@ jobs:
 
       - name: Make
         run: |
-          if not startsWith(github.ref, 'refs/tags/') (
+          if not startsWith(github.ref, 'refs/tags/') 
+          then
             npm run make
-          ) 
-          else (
+          else
             echo "Tag push detected. Skipping make."
-          )
+          fi
 
       - name: Publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          if startsWith(github.ref, 'refs/tags/') (
+          if startsWith(github.ref, 'refs/tags/') 
+          then
             npm run publish
-          ) 
-          else (
+          else
             echo "Not a tag push. Skipping publish."
-          )
+          fi
