--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,22 +26,12 @@ jobs:
           yarn global add eslint
           yarn lint
 
-      - name: Make
-        run: |
-          if not startsWith(github.ref, 'refs/tags/') 
-          then
-            npm run make
-          else
-            echo "Tag push detected. Skipping make."
-          fi
-
+          - name: Make
+          run: |
+            [ "${{ startsWith(github.ref, 'refs/tags/') }}" != "true" ] && npm run make || true
+  
       - name: Publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          if startsWith(github.ref, 'refs/tags/') 
-          then
-            npm run publish
-          else
-            echo "Not a tag push. Skipping publish."
-          fi
+          [ "${{ startsWith(github.ref, 'refs/tags/') }}" == "true" ] && npm run publish || true
