--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,12 +26,12 @@ jobs:
           yarn global add eslint
           yarn lint
 
-          - name: Make
-          run: |
-            [ "${{ startsWith(github.ref, 'refs/tags/') }}" != "true" ] && npm run make || true
+      - name: Make
+        if: ${{ startsWith(github.ref, 'refs/tags/v') != 'true' }}
+        run:  npm run make
   
       - name: Publish
+        if: ${{ startsWith(github.ref, 'refs/tags/v') == 'true' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          [ "${{ startsWith(github.ref, 'refs/tags/') }}" == "true" ] && npm run publish || true
+        run:  npm run publish
