--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,11 +27,11 @@ jobs:
           yarn lint
 
       - name: Make
-        if: ${{ startsWith(github.ref, 'refs/tags/v') != 'true' }}
+        if: github.ref_type != 'tag'
         run:  npm run make
   
       - name: Publish
-        if: ${{ startsWith(github.ref, 'refs/tags/v') == 'true' }}
+        if: github.ref_type == 'tag'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run:  npm run publish
